[be, api, v0] implement GET-/record/..
